--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -788,6 +788,16 @@
 										type: 'div'
 									});
 								}
+								if(data == "3020") {
+									mui.toast(TextMessage.input_email, {
+										duration: 'long',
+										type: 'div'
+									});
+									mui.openWindow({
+										id: 'emai_summate',
+										url:"../../login/emai_summate.html"
+									});
+								}
 								console.log("other error code:" + data);
 								
 							}
