--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -72,7 +72,7 @@
 				                     	<input type="hidden" name="comm_state" id="comm_state" value="" />
 				                </div>
 				            </li>
-				            <li class="mui-table-view-cell">
+				            <li class="mui-table-view-cell" style="display: none;">
 		                     	<span class="ka_proinfo lang" data-locale="commodity_price"></span>
 		                     	<div class="mui-pull-right">
 		                     		<input type="text" name="price" id="price" value="" placeholder="" cla="ka_comdprice" maxlength="10" />
@@ -87,11 +87,11 @@
 				    	 <ul class="mui-table-view">
 				    	         <li class="mui-table-view-cell" style="text-align:center;margin-left:3%;">
 				    	             <div class="ka_userbox">
-					    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_switch" id="exchbuybtn"></div>
+					    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_switch" id="exchbuybtn" style="width: 45%;"></div>
 					    	            <input type="hidden" name="exchange" id="exchange" value="0" />
-					    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_pointbuy" id="pointbuybtn"></div>
+					    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_pointbuy" id="pointbuybtn" style="display: none;"></div>
 					    	             <input type="hidden" name="business" id="business" value="0" />
-					    	             <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_free" id="freebuybtn"></div>
+					    	             <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_free" id="freebuybtn" style="width: 45%;"></div>
 					    	             <input type="hidden" name="gratis" id="gratis" value="0" />
 				    	            </div>
 				    	         </li>
