--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -103,14 +103,14 @@
 									</li>
 								</ul>
 								<ul class="user-comment-list">
-									<li class="user-point-grid">
+									<li class="user-point-grid" style="display: none;">
 										<a href="#">
 											<font color="#AAAAAA" size="1">
 												<span class="mui-icon-extra mui-icon-extra-share lang" data-locale="userpointtext" style="font-size: 16px;"></span>　
 											</font>
 										</a>
 									</li>
-									<li class="user-point-grid2">
+									<li class="user-point-grid2" style="display: none;">
 											<font size="2" class="point"></font>
 									</li>
 									<li class="user-point-grid" id="area">
