--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -49,12 +49,12 @@
 				    </ul>
 				    <h5 style="padding-left: 10px;" class="lang" data-locale="setting"></h4>-->
 					<ul class="mui-table-view">
-				        <li class="mui-table-view-cell tickbuy">
+				        <!--<li class="mui-table-view-cell tickbuy">
 				            <a class="mui-navigate-right lang" data-locale="ticketbuy"></a>
 				        </li>
 				        <li class="mui-table-view-cell pointmony">
 				            <a class="mui-navigate-right lang" data-locale="">point提现</a>
-				        </li>
+				        </li>-->
 				         <li class="mui-table-view-cell">
 				            <a class="mui-navigate-right lang" data-locale="userule" href="#Utilization"></a>
 				        </li>
