--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -575,6 +575,7 @@
 				var search = "";
 				var page = "";
 				var pageInfo = {};
+				var keyword = "";
 				//阻尼系数
 				var deceleration = mui.os.ios ? 0.003 : 0.0009;
 				mui('.mui-scroll-wrapper').scroll({
@@ -624,7 +625,7 @@
 						if (DEBUG) {
 							alert("getDataFromServer 3");
 						}
-						
+						keyword = event.detail.keyword;
 						getDataFromServer(
 							$('.mui-slider-group .mui-scroll:eq(0) .mui-table-view')[0],
 							0,
@@ -698,7 +699,7 @@
 										if (DEBUG) {
 											alert("getDataFromServer 5");
 										}
-										getDataFromServer(ul, index, 16, catalog, null, null, true, self);
+										getDataFromServer(ul, index, 16, catalog, keyword, null, true, self);
 									}, 1000);
 								}
 							},
@@ -715,7 +716,7 @@
 											if (DEBUG) {
 												alert("getDataFromServer 6");
 											}
-											getDataFromServer(ul, index, 16, catalog, null, ++pageInfo.page, false, self);
+											getDataFromServer(ul, index, 16, catalog, keyword, ++pageInfo.page, false, self);
 										}
 									}, 1000);
 								}
@@ -737,7 +738,7 @@
 						if(max != null) {
 							params.max = max;
 						}
-						if(search != null) {
+						if(search != null && search != "") {
 							params.search = search;
 						}
 						if(page != null) {
@@ -746,7 +747,8 @@
 						Repository.Commodity.commodityList(params, {
 							ok: function(data) {
 								createFragment(data.data.commd, ul, index, reverse, self);
-								updateUserPhoto(data.data.users);
+								updateUserPhoto(data.data.users.photo);
+								updateNoticeStatus(data.data.users.sys_msg_flg);
 								savePageInfo(data.data.pages);
 							},
 							ng: function(statuscode) {
@@ -785,6 +787,16 @@
 						var homePage = plus.webview.getWebviewById('home.html');
 						mui.fire(homePage, 'updateUserImgEvent', {
 							userImgURL: userImgURL
+						});
+					}
+					
+					var updateNoticeStatus = function(flg) {
+						if(typeof(plus) == "undefined") {
+							return;
+						}
+						var homePage = plus.webview.getWebviewById('home.html');
+						mui.fire(homePage, 'updateNoticeStatusEvent', {
+							flg: flg
 						});
 					}
 
@@ -926,15 +938,15 @@
 							};
 							Repository.Commodity.praise(params, {
 								ok: function(result) {
-									var praise_flag = result.data[0].praise_flag;
+									var praise_flag = result.data[0].p_flg;
 									if(praise_flag == "0") {
 										_self.prev().addClass('comm-like-gray');
 										_self.prev().removeClass('comm-like-red');
-										_self.text(parseInt(_self.text()) - 1);
+										_self.text(result.data[0].p_cnt);
 									} else if(praise_flag == "1") {
 										_self.prev().addClass('comm-like-red');
 										_self.prev().removeClass('comm-like-gray');
-										_self.text(parseInt(_self.text()) + 1);
+										_self.text(result.data[0].p_cnt);
 									} else {
 										if(DEBUG) {
 											alert("praise_flag is error.");
