--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -156,6 +156,7 @@
 							var waiting = plus.nativeUI.showWaiting();
 							auth.login(function() {
 								auth.getUserInfo(function() {
+									alert("getUserInfo");
 									var name = auth.userInfo.nickname || auth.userInfo.name;
 									var params = {};
 									params[Api.Params.loginType] = LOGIN_TYPE.OAUTH;
@@ -178,8 +179,8 @@
 											if(data === "3020") {
 												plus.nativeUI.alert(TextMessage.input_email, function(event) {
 													mui.openWindow({
-														id: "reg",
-														url: "reg.html",
+														id: "emai_summate",
+														url: "emai_summate.html",
 														waiting: {
 															autoShow: false
 														},
@@ -194,8 +195,19 @@
 											waiting.close();
 										}
 									});
-								}, function(e) {});
+								}, function(e) {
+									alert("eee");
+								});
 							}, function(e) {
+								var description = "";
+								if(Validator.isObj(e)) {
+									for(var i in e) {
+										var property = e[i];
+										description += i + " = " + property + "\n";
+									}
+								}
+								var alertInfo = Validator.isObj(e) ? description : e;
+								alert(alertInfo);
 								waiting.close();
 							});
 						});
