--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -135,7 +135,7 @@
 				plus.webview.close(preView);
 				showRequestDetail();
 			})
-
+			//setInterval(showRequestDetail, 10000, "");
 			function submitChat() {
 				var chatMsg = $("#msg").val();
 				if(chatMsg == '') {
@@ -178,9 +178,6 @@
 				};
 				Repository.Transaction.transEdite(params, {
 					ok: function(data) {
-						console.log("data start -------");
-						console.dir(data);
-						console.log("data end -------");
 						var transinfo = data.data.transinfo;
 						var messginfo = data.data.messginfo;
 						var commdinfo = data.data.commdinfo;
@@ -188,7 +185,6 @@
 						var buyer_flag = false;
 						var tranStatusVal = getTransStatus(transinfo.status);
 						$(".tran-name-middle-status font").html(tranStatusVal);
-						//showTranCommodMsg(usersinfo, commdinfo, messginfo);
 						var buyer_id = transinfo[0].issue_user_id;
 						var seller_id = transinfo[0].accept_user_id;
 						var cur_user_id = data.myid;
@@ -211,7 +207,6 @@
 							showChatMsg(usersinfo, messginfo, cur_user_id);
 						}
 						tranStatusVal = trans_type == 0 ? "请求中" : "订单中"
-						alert(trans_type);
 						$(".tran-name-middle-status font").html(tranStatusVal);
 						showRequestStaus(transinfo, buyer_flag, usersinfo);
 					},
@@ -276,6 +271,8 @@
 			function showTranCommodMsg(transinfo, usersinfo, commdinfo, cur_user_id) {
 				var buyer_photo, buyer_nickname, buyer_id, seller_photo, seller_nickname, seller_id, trans_mode, buyer_msg = '',
 					seller_msg = '';
+				var buyer_comm_info = new Array();
+				var seller_comm_info = new Array();
 				for(var user in usersinfo) {
 					if(usersinfo[user].user_role == "issue") {
 						buyer_photo = usersinfo[user].photo;
@@ -293,21 +290,28 @@
 						buyer_comm_id = commdinfo[goods].commodity_id;
 						buyer_comm_img = commdinfo[goods].img_flg;
 						buyer_comm_name = commdinfo[goods].comm_name;
+						buyer_comm_info.push(commdinfo[goods]);
 					} else {
 						seller_comm_id = commdinfo[goods].commodity_id;
 						seller_comm_img = commdinfo[goods].img_flg;
 						seller_comm_name = commdinfo[goods].comm_name;
+						seller_comm_info.push(commdinfo[goods]);
 					}
 				}
+				
 				var buyer_flag = false;
 				if(cur_user_id == buyer_id) buyer_flag = true;
 				var trans_mode = transinfo[0].trans_mode;
+				
 				if(trans_mode == 0) {
 					seller_msg += '<a href="#">';
 					seller_msg += '<div class="mui-media-body" style="height:35px;margin-top:0px;">';
 					seller_msg += '<img height="32px" width="32px" src="' + seller_photo + '" />';
 					seller_msg += '<font size="2" vertical-align="middle">' + seller_nickname + '</font>';
 					seller_msg += '</div>';
+					if(seller_comm_info.length > 1){
+						seller_msg += '<img src="../../images/morebut.png" style="position:absolute;float:right;margin-left:72%;width: 25px; height: 25px;">';
+					}
 					seller_msg += '<img style="height:85px;width:128px;" class="mui-media-object" src="' + seller_comm_img + '">';
 					seller_msg += '</a>';
 					seller_msg += '<input type="hidden" name="seller_commodity_id" value="' + seller_comm_id + '">';
@@ -317,6 +321,9 @@
 					buyer_msg += '<img height="32px" width="32px" src="' + buyer_photo + '" />';
 					buyer_msg += '<font size="2" vertical-align="middle">' + buyer_nickname + '</font>';
 					buyer_msg += '</div>';
+					if(buyer_comm_info.length > 1){
+						buyer_msg += '<img id="moreicon" src="../../images/morebut.png" style="position:absolute;float:right;margin-left:72%;width: 25px; height: 25px;">';
+					}
 					buyer_msg += '<img style="height:85px;width:128px;" class="mui-media-object" src="' + buyer_comm_img + '">';
 					buyer_msg += '</a>';
 					buyer_msg += '<input type="hidden" name="buyer_commodity_id" value="' + buyer_comm_id + '">';
@@ -345,7 +352,6 @@
 
 			function goods_detail(cur_user_id, comminfo,flag) {
 				var detailPage = null;
-				alert(comminfo.length);
 				var cur_comm_arr = new Array();
 				var request_user_arr = new Array();
 				var cur_commid = '';
@@ -390,12 +396,9 @@
 				}else{
 					mui.openWindow({
 						url: "./change_item.html",
-						id: "changeitem",
+						id: "change_item",
 						extras: {
-							"transid": trans_id,
-							"choice":cur_commid,
-							'mode':'exchange',
-							'commodity_id':comminfo[0].commodity_id
+							"transid": trans_id
 						}
 					})
 				}
@@ -692,7 +695,6 @@
 						var commdinfo = data.data.commdinfo;
 						var usersinfo = data.data.usersinfo;
 						var tranStatusVal = getTransStatus(transinfo.status);
-						alert(tranStatusVal);
 						$(".tran-name-middle-status font").html(tranStatusVal);
 						//showTranCommodMsg(usersinfo, commdinfo, messginfo);
 						var buyer_id = transinfo.issue_user_id;
