--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/transaction/transevaluate.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/transaction/transevaluate.html
@@ -97,15 +97,22 @@
 		<script type="text/javascript" src="../../js/sha256.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			mui.init();
+			mui.init({
+				beforeback: function() {
+					//var list = plus.webview.getWebviewById('pullrefresh_with_tab');
+					var list = plus.webview.currentWebview().opener();
+					mui.fire(list, 'refresh', {
+						refresh: "canRefresh"
+					});
+					return true;
+				}
+			});
 			var trans_id;
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				trans_id = self.transid;
 			});
-			//mui(".mui-input-row").on('tap','#evaluate_btn',function(){
-			//	evaluate_submit();
-			//});
+
 			function evaluate_submit() {
 				var evaluate_flg = $("input[name='evalueate']:checked").val();
 				var evaluate_msg = $("#evaluate_msg").val();
@@ -117,13 +124,14 @@
 				Repository.Transaction.transOrderEvaluate(params, {
 					ok: function(data) {
 						Log.i("message send successfully!");
-						mui.openWindow({
-							url: "../main/main.html",
-							id: "main.html",
-							extras: {
-								"transid": trans_id
-							}
-						});
+						mui.plusReady(function() {
+								alert("aaaa");
+								var preView = plus.webview.getWebviewById('transaction');
+								plus.webview.close(preView);
+								var mainpage = plus.webview.getWebviewById('pullrefresh_with_tab');
+								mui.back();
+								mui.fire(mainpage, 'refresh', { refresh: "canRefresh" });
+							});
 					},
 					ng: function(data) {
 						Log.i("message send faild!");
@@ -135,12 +143,12 @@
 						}
 						if(data == "2019") {
 							alert("不能重复评论");
-							mui.openWindow({
-								url: "../main/main.html",
-								id: "main.html",
-								extras: {
-									"transid": trans_id
-								}
+							mui.plusReady(function() {
+								var preView = plus.webview.getWebviewById('transaction');
+								plus.webview.close(preView);
+								var mainpage = plus.webview.getWebviewById('pullrefresh_with_tab');
+								mui.back();
+								mui.fire(mainpage, 'refresh', { refresh: "canRefresh" });
 							});
 						}
 					}
