--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/logisticslist.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/logisticslist.html
@@ -22,13 +22,13 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-icon-back mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
+			<!--<a class="mui-icon-back mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
 				<font size="4" id="goback">
 					<font size="4">
-			</a>
+			</a>-->
 			<h1 class="mui-title lang" data-locale="logistic"></h1>
 		</header>
-		<div class="mui-content" style="margin-top: 2.1em;">
+		<div class="mui-content">
 			<!--send message to delivery-->
 			<div id="dialog" class="call-dialog-div">
 				<div id="deliveryMsgDiv" class="call-dialog-msg-div">
