--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/request.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/request.html
@@ -179,6 +179,8 @@
 						var translatepage=null;
 						mui('.translate').on('tap','a',function(e) {
 							var tid = this.getAttribute('id');
+							//var curView = plus.webview.currentWebview();
+							//plus.webview.close(curView);
 							mui.openWindow({
 								url:"../../transaction/transaction2.html?transid=" + tid,
 								id:"transaction",
